--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "Pop Up Ice cream shop : Portfolio Piece by Lance Avitia",
   "main": "app.js",
+  "engines": {
+    "node": "17.5.0"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node app.js"
@@ -13,6 +16,6 @@
     "ejs": "^3.1.5",
     "express": "^4.17.1",
     "gray-matter": "^4.0.2",
-    "node-sass": "^5.0.0"
+    "node-sass": "^7.0.1"
   }
 }
